// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-typeahead Default 1`] = `
<div>
  <div
    class="m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select"
    >
      <div
        class="m-base-select__popup"
        style="width: 288px;"
      >
        <div
          aria-controls="m-typeahead-fakeId-controls"
          aria-haspopup="true"
          class="m-textfield m--has-label m--is-type-text"
          cursor-pointer="true"
          style="width: 100%; max-width: 288px;"
        >
          <div
            class="m-input-style m--has-label m--is-tag-default"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__main"
            >
              <div
                class="m-input-style__body"
              >
                <label
                  class="m-input-style__label"
                  for="mTextfield-fakeId"
                  style="margin-right: 0px;"
                >
                  <span
                    class="m-input-style__text"
                  >
                    <span>
                      Fruits and vegetables
                    </span>
                     
                    <!---->
                  </span>
                </label>
                 
                <div
                  class="m-input-style__input"
                >
                  <!---->
                   
                  <div
                    class="m-input-style__content"
                  >
                    <input
                      class="m-textfield__input"
                      id="mTextfield-fakeId"
                      maxlength="Infinity"
                      type="text"
                    />
                       
                    <!---->
                     
                    <!---->
                     
                    <!---->
                  </div>
                   
                  <div
                    class="m-input-style__suffix"
                  >
                    <!---->
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
          </div>
           
          <div
            class="m-textfield__validation"
          >
            <div
              class="m-validation-message m-textfield__validation__message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-typeahead__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <p>
    v-model = 
  </p>
   
  <h2
    class="m-u--h5"
  >
    Values
  </h2>
   
  <p>
    [
  "Tomato",
  "Celery",
  "Apple",
  "Bannana",
  "Patate",
  "Carrot",
  "Avocados",
  "Eggplant",
  "Beet",
  "Pineapple",
  "Lemon",
  "Pumpkin",
  "Kiwi"
]
  </p>
</div>
`;

exports[`Storyshots modul-components|m-typeahead custom results 1`] = `
<div>
  <div
    class="m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select"
    >
      <div
        class="m-base-select__popup"
        style="width: 288px;"
      >
        <div
          aria-controls="m-typeahead-fakeId-controls"
          aria-haspopup="true"
          class="m-textfield m--has-label m--is-type-text"
          cursor-pointer="true"
          style="width: 100%; max-width: 288px;"
        >
          <div
            class="m-input-style m--has-label m--is-tag-default"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__main"
            >
              <div
                class="m-input-style__body"
              >
                <label
                  class="m-input-style__label"
                  for="mTextfield-fakeId"
                  style="margin-right: 0px;"
                >
                  <span
                    class="m-input-style__text"
                  >
                    <span>
                      Fruits and vegetables
                    </span>
                     
                    <!---->
                  </span>
                </label>
                 
                <div
                  class="m-input-style__input"
                >
                  <!---->
                   
                  <div
                    class="m-input-style__content"
                  >
                    <input
                      class="m-textfield__input"
                      id="mTextfield-fakeId"
                      maxlength="Infinity"
                      type="text"
                    />
                       
                    <!---->
                     
                    <!---->
                     
                    <!---->
                  </div>
                   
                  <div
                    class="m-input-style__suffix"
                  >
                    <!---->
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
          </div>
           
          <div
            class="m-textfield__validation"
          >
            <div
              class="m-validation-message m-textfield__validation__message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-typeahead__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-typeahead filter-results-manually 1`] = `
<div>
  <div
    class="m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select"
    >
      <div
        class="m-base-select__popup"
        style="width: 288px;"
      >
        <div
          aria-controls="m-typeahead-fakeId-controls"
          aria-haspopup="true"
          class="m-textfield m--is-type-text"
          cursor-pointer="true"
          style="width: 100%; max-width: 288px;"
        >
          <div
            class="m-input-style m--is-tag-default"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__main"
            >
              <div
                class="m-input-style__body"
              >
                <span
                  class="m-input-style__label"
                  style="z-index: -1;"
                >
                  <span
                    class="m-input-style__text"
                  />
                </span>
                 
                <div
                  class="m-input-style__input"
                >
                  <div
                    class="m-input-style__prefix"
                  />
                   
                  <div
                    class="m-input-style__content"
                  >
                    <input
                      class="m-textfield__input"
                      id="mTextfield-fakeId"
                      maxlength="Infinity"
                      placeholder="Fruits and vegetables"
                      type="text"
                    />
                       
                    <!---->
                     
                    <!---->
                     
                    <!---->
                  </div>
                   
                  <div
                    class="m-input-style__suffix"
                  >
                    <!---->
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
          </div>
           
          <div
            class="m-textfield__validation"
          >
            <div
              class="m-validation-message m-textfield__validation__message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-typeahead__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <h2
    class="m-u--h5"
  >
    Results
  </h2>
   
  <p>
    [
  "Apple",
  "Avocados",
  "Bannana",
  "Beet",
  "Carrot",
  "Celery",
  "Eggplant",
  "Kiwi",
  "Lemon",
  "Patate",
  "Pineapple",
  "Pumpkin",
  "Tomato"
]
  </p>
</div>
`;

exports[`Storyshots modul-components|m-typeahead max-results 1`] = `
<div>
  <div
    class="m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select"
    >
      <div
        class="m-base-select__popup"
        style="width: 288px;"
      >
        <div
          aria-controls="m-typeahead-fakeId-controls"
          aria-haspopup="true"
          class="m-textfield m--has-label m--is-type-text"
          cursor-pointer="true"
          style="width: 100%; max-width: 288px;"
        >
          <div
            class="m-input-style m--has-label m--is-tag-default"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__main"
            >
              <div
                class="m-input-style__body"
              >
                <label
                  class="m-input-style__label"
                  for="mTextfield-fakeId"
                  style="margin-right: 0px;"
                >
                  <span
                    class="m-input-style__text"
                  >
                    <span>
                      Fruits and vegetables
                    </span>
                     
                    <!---->
                  </span>
                </label>
                 
                <div
                  class="m-input-style__input"
                >
                  <!---->
                   
                  <div
                    class="m-input-style__content"
                  >
                    <input
                      class="m-textfield__input"
                      id="mTextfield-fakeId"
                      maxlength="Infinity"
                      type="text"
                    />
                       
                    <!---->
                     
                    <!---->
                     
                    <!---->
                  </div>
                   
                  <div
                    class="m-input-style__suffix"
                  >
                    <!---->
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
          </div>
           
          <div
            class="m-textfield__validation"
          >
            <div
              class="m-validation-message m-textfield__validation__message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-typeahead__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <p>
    maxResult = 5
  </p>
   
  <h2
    class="m-u--h5"
  >
    Values
  </h2>
   
  <p>
    [
  "Apple",
  "Avocados",
  "Bannana",
  "Beet",
  "Carrot",
  "Celery",
  "Eggplant",
  "Kiwi",
  "Lemon",
  "Patate",
  "Pineapple",
  "Pumpkin",
  "Tomato"
]
  </p>
</div>
`;

exports[`Storyshots modul-components|m-typeahead/mobile iphone6 1`] = `
<div>
  <div
    class="m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select"
    >
      <div
        class="m-base-select__popup"
        style="width: 288px;"
      >
        <div
          aria-controls="m-typeahead-fakeId-controls"
          aria-haspopup="true"
          class="m-textfield m--has-label m--is-type-text"
          cursor-pointer="true"
          style="width: 100%; max-width: 288px;"
        >
          <div
            class="m-input-style m--has-label m--is-tag-default"
            style="margin-top: 10px;"
          >
            <div
              class="m-input-style__main"
            >
              <div
                class="m-input-style__body"
              >
                <label
                  class="m-input-style__label"
                  for="mTextfield-fakeId"
                  style="margin-right: 0px;"
                >
                  <span
                    class="m-input-style__text"
                  >
                    <span>
                      Fruits and vegetables
                    </span>
                     
                    <!---->
                  </span>
                </label>
                 
                <div
                  class="m-input-style__input"
                >
                  <!---->
                   
                  <div
                    class="m-input-style__content"
                  >
                    <input
                      class="m-textfield__input"
                      id="mTextfield-fakeId"
                      maxlength="Infinity"
                      type="text"
                    />
                       
                    <!---->
                     
                    <!---->
                     
                    <!---->
                  </div>
                   
                  <div
                    class="m-input-style__suffix"
                  >
                    <!---->
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
          </div>
           
          <div
            class="m-textfield__validation"
          >
            <div
              class="m-validation-message m-textfield__validation__message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-typeahead__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-popup"
      >
        <div
          class="m-popper"
        >
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <h2
    class="m-u--h5"
  >
    Results
  </h2>
   
  <p>
    [
  "Apple",
  "Avocados",
  "Bannana",
  "Beet",
  "Carrot",
  "Celery",
  "Eggplant",
  "Kiwi",
  "Lemon",
  "Patate",
  "Pineapple",
  "Pumpkin",
  "Tomato"
]
  </p>
</div>
`;
